// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can generate classes 1`] = `
":root {
  --color-primary-200: #aed051;
  --color-primary-300: #c3dd7b;
  --color-primary-400: #d7e9a6;
  --color-primary-600: #75912b;
  --color-primary-500: #93b733;
  --color-primary-700: #576b21;
  --color-primary-800: #3a4717;
  --color-neutral-600: white;
  --color-neutral-500: rgb(255, 255, 255);
  --color-neutral-400: rgb(255, 255, 255);
  --color-neutral-300: #fefefe;
  --color-neutral-200: #fefefe;
  --color-neutral-100: #fefefe;
  --color-neutral-800: #7f7f7f;
  --color-neutral-900: black;
  --color-primary: #93b733;
  --color-neutral: #fefefe;
  --size-none: 0;
  --size-none--em: 0;
  --size-xx-small: 2px;
  --size-xx-small--em: 0.125;
  --size-x-small: 4px;
  --size-x-small--em: 0.25;
  --size-small: 0.5;
  --size-small--em: 0.5;
  --size-regular: 16px;
  --size-regular--em: 1;
  --size-large: 200%;
  --size-large--em: 2;
  --size-x-large: 64px;
  --size-x-large--em: 4;
  --size-xx-large: 128px;
  --size-xx-large--em: 8;
  --opacity-20: 0.2;
  --opacity-20--em: 0.2;
  --opacity-50: 50%;
  --opacity-50--em: 0.5;
  --opacity-80: 80%;
  --opacity-80--em: 0.8;
  --leadings-tightest: 1.125;
  --leadings-tightest--em: 1.125;
  --leadings-tighter: 1.25;
  --leadings-tighter--em: 1.25;
  --leadings-tight: 1.375;
  --leadings-tight--em: 1.375;
  --leadings-normal: 1.5;
  --leadings-normal--em: 1.5;
  --leadings-loose: 1.625;
  --leadings-loose--em: 1.625;
  --leadings-looser: 1.75;
  --leadings-looser--em: 1.75;
  --leadings-loosest: 1.875;
  --leadings-loosest--em: 1.875;
  --weight-ultralight: 100;
  --weight-ultralight--em: 100;
  --weight-extralight: 200;
  --weight-extralight--em: 200;
  --weight-light: 300;
  --weight-light--em: 300;
  --weight-regular: 400;
  --weight-regular--em: 400;
  --weight-medium: 500;
  --weight-medium--em: 500;
  --weight-semibold: 600;
  --weight-semibold--em: 600;
  --weight-bold: 700;
  --weight-bold--em: 700;
  --weight-extrabold: 800;
  --weight-extrabold--em: 800;
  --weight-ultrabold: 900;
  --weight-ultrabold--em: 900;
}

.color-primary-200 {
  color: var(--color-primary-200, #aed051);
}

.bg-primary-200 {
  background-color: var(--color-primary-200, #aed051);
}

.color-primary-300 {
  color: var(--color-primary-300, #c3dd7b);
}

.bg-primary-300 {
  background-color: var(--color-primary-300, #c3dd7b);
}

.color-primary-400 {
  color: var(--color-primary-400, #d7e9a6);
}

.bg-primary-400 {
  background-color: var(--color-primary-400, #d7e9a6);
}

.color-primary-600 {
  color: var(--color-primary-600, #75912b);
}

.bg-primary-600 {
  background-color: var(--color-primary-600, #75912b);
}

.color-primary-500 {
  color: var(--color-primary-500, #93b733);
}

.bg-primary-500 {
  background-color: var(--color-primary-500, #93b733);
}

.color-primary-700 {
  color: var(--color-primary-700, #576b21);
}

.bg-primary-700 {
  background-color: var(--color-primary-700, #576b21);
}

.color-primary-800 {
  color: var(--color-primary-800, #3a4717);
}

.bg-primary-800 {
  background-color: var(--color-primary-800, #3a4717);
}

.color-neutral-600 {
  color: var(--color-neutral-600, white);
}

.bg-neutral-600 {
  background-color: var(--color-neutral-600, white);
}

.color-neutral-500 {
  color: var(--color-neutral-500, rgb(255, 255, 255));
}

.bg-neutral-500 {
  background-color: var(--color-neutral-500, rgb(255, 255, 255));
}

.color-neutral-400 {
  color: var(--color-neutral-400, rgb(255, 255, 255));
}

.bg-neutral-400 {
  background-color: var(--color-neutral-400, rgb(255, 255, 255));
}

.color-neutral-300 {
  color: var(--color-neutral-300, #fefefe);
}

.bg-neutral-300 {
  background-color: var(--color-neutral-300, #fefefe);
}

.color-neutral-200 {
  color: var(--color-neutral-200, #fefefe);
}

.bg-neutral-200 {
  background-color: var(--color-neutral-200, #fefefe);
}

.color-neutral-100 {
  color: var(--color-neutral-100, #fefefe);
}

.bg-neutral-100 {
  background-color: var(--color-neutral-100, #fefefe);
}

.color-neutral-800 {
  color: var(--color-neutral-800, #7f7f7f);
}

.bg-neutral-800 {
  background-color: var(--color-neutral-800, #7f7f7f);
}

.color-neutral-900 {
  color: var(--color-neutral-900, black);
}

.bg-neutral-900 {
  background-color: var(--color-neutral-900, black);
}

.color-primary {
  color: var(--color-primary, #93b733);
}

.bg-primary {
  background-color: var(--color-primary, #93b733);
}

.color-neutral {
  color: var(--color-neutral, #fefefe);
}

.bg-neutral {
  background-color: var(--color-neutral, #fefefe);
}

.opacity-20 {
  opacity: 20%;
}

.opacity-50 {
  opacity: 50%;
}

.opacity-80 {
  opacity: 80%;
}

.text-sm {
  font-size: 0.5;
  line-height: 1.625;
}

.text-md {
  font-size: 16px;
  line-height: 1.75;
}

.text-lg {
  font-size: 200%;
  line-height: 1.625;
}"
`;

exports[`can generate utility classes 1`] = `
":root {
  --color-white: #ffffff;
  --color-black: #000000;
  --color-success: #006820;
  --color-warning: #884b00;
  --color-danger: #711100;
  --color-info: #006865;
  --size-xxs: 10px;
  --size-xxs--em: 0.625;
  --size-xs: 12px;
  --size-xs--em: 0.75;
  --size-sm: 14px;
  --size-sm--em: 0.875;
  --size-md: 16px;
  --size-md--em: 1;
  --size-lg: 18px;
  --size-lg--em: 1.125;
  --size-xl: 20px;
  --size-xl--em: 1.25;
  --size-xxl: 24px;
  --size-xxl--em: 1.5;
  --opacity-0: 0%;
  --opacity-0--em: 0;
  --opacity-10: 10%;
  --opacity-10--em: 0.1;
  --opacity-20: 20%;
  --opacity-20--em: 0.2;
  --opacity-30: 30%;
  --opacity-30--em: 0.3;
  --opacity-40: 40%;
  --opacity-40--em: 0.4;
  --opacity-50: 50%;
  --opacity-50--em: 0.5;
  --opacity-60: 60%;
  --opacity-60--em: 0.6;
  --opacity-70: 70%;
  --opacity-70--em: 0.7;
  --opacity-80: 80%;
  --opacity-80--em: 0.8;
  --opacity-90: 90%;
  --opacity-90--em: 0.9;
  --opacity-100: 100%;
  --opacity-100--em: 1;
  --leading-tightest: 1.125;
  --leading-tightest--em: 1.125;
  --leading-tighter: 1.25;
  --leading-tighter--em: 1.25;
  --leading-tight: 1.375;
  --leading-tight--em: 1.375;
  --leading-normal: 1.5;
  --leading-normal--em: 1.5;
  --leading-loose: 1.625;
  --leading-loose--em: 1.625;
  --leading-looser: 1.75;
  --leading-looser--em: 1.75;
  --leading-loosest: 1.875;
  --leading-loosest--em: 1.875;
  --weight-ultralight: 100;
  --weight-ultralight--em: 100;
  --weight-extralight: 200;
  --weight-extralight--em: 200;
  --weight-light: 300;
  --weight-light--em: 300;
  --weight-regular: 400;
  --weight-regular--em: 400;
  --weight-medium: 500;
  --weight-medium--em: 500;
  --weight-semibold: 600;
  --weight-semibold--em: 600;
  --weight-bold: 700;
  --weight-bold--em: 700;
  --weight-extrabold: 800;
  --weight-extrabold--em: 800;
  --weight-ultrabold: 900;
  --weight-ultrabold--em: 900;
  --timing-slow: 1000ms;
  --timing-slow--em: 1000;
  --timing-slower: 1500ms;
  --timing-slower--em: 1500;
  --timing-slowest: 2000ms;
  --timing-slowest--em: 2000;
  --timing-fast: 500ms;
  --timing-fast--em: 500;
  --timing-faster: 250ms;
  --timing-faster--em: 250;
  --timing-fastest: 100ms;
  --timing-fastest--em: 100;
  --tracking-tightest: -0.08em;
  --tracking-tightest--em: -0.08;
  --tracking-tighter: -0.04em;
  --tracking-tighter--em: -0.04;
  --tracking-tight: -0.02em;
  --tracking-tight--em: -0.02;
  --tracking-normal: 0;
  --tracking-normal--em: 0;
  --tracking-loose: 0.02em;
  --tracking-loose--em: 0.02;
  --tracking-looser: 0.04em;
  --tracking-looser--em: 0.04;
  --tracking-loosest: 0.08em;
  --tracking-loosest--em: 0.08;
  --zindex-back: 1000;
  --zindex-back--em: 1000;
  --zindex-front: 2000;
  --zindex-front--em: 2000;
  --zindex-top: 3000;
  --zindex-top--em: 3000;
  --family-sans: sans-serif;
  --family-serif: serif;
  --family-mono: monospace;
}

/* *** COLORS *** */
.color-white,
.focus\\.color-white:focus,
.hover\\.color-white:hover {
  --color-opacity: 1;
  color: color-mix(in srgb, var(--color-white, #ffffff) var(--color-opacity, 1), transparent);
}

.color-black,
.focus\\.color-black:focus,
.hover\\.color-black:hover {
  --color-opacity: 1;
  color: color-mix(in srgb, var(--color-black, #000000) var(--color-opacity, 1), transparent);
}

.color-success,
.focus\\.color-success:focus,
.hover\\.color-success:hover {
  --color-opacity: 1;
  color: color-mix(in srgb, var(--color-success, #006820) var(--color-opacity, 1), transparent);
}

.color-warning,
.focus\\.color-warning:focus,
.hover\\.color-warning:hover {
  --color-opacity: 1;
  color: color-mix(in srgb, var(--color-warning, #884b00) var(--color-opacity, 1), transparent);
}

.color-danger,
.focus\\.color-danger:focus,
.hover\\.color-danger:hover {
  --color-opacity: 1;
  color: color-mix(in srgb, var(--color-danger, #711100) var(--color-opacity, 1), transparent);
}

.color-info,
.focus\\.color-info:focus,
.hover\\.color-info:hover {
  --color-opacity: 1;
  color: color-mix(in srgb, var(--color-info, #006865) var(--color-opacity, 1), transparent);
}

/* *** SIZES *** */
.top-xxs {
  top: var(--size-xxs, 10px);
}

.top-xs {
  top: var(--size-xs, 12px);
}

.top-sm {
  top: var(--size-sm, 14px);
}

.top-md {
  top: var(--size-md, 16px);
}

.top-lg {
  top: var(--size-lg, 18px);
}

.top-xl {
  top: var(--size-xl, 20px);
}

.top-xxl {
  top: var(--size-xxl, 24px);
}

.bottom-xxs {
  bottom: var(--size-xxs, 10px);
}

.bottom-xs {
  bottom: var(--size-xs, 12px);
}

.bottom-sm {
  bottom: var(--size-sm, 14px);
}

.bottom-md {
  bottom: var(--size-md, 16px);
}

.bottom-lg {
  bottom: var(--size-lg, 18px);
}

.bottom-xl {
  bottom: var(--size-xl, 20px);
}

.bottom-xxl {
  bottom: var(--size-xxl, 24px);
}

.left-xxs {
  left: var(--size-xxs, 10px);
}

.left-xs {
  left: var(--size-xs, 12px);
}

.left-sm {
  left: var(--size-sm, 14px);
}

.left-md {
  left: var(--size-md, 16px);
}

.left-lg {
  left: var(--size-lg, 18px);
}

.left-xl {
  left: var(--size-xl, 20px);
}

.left-xxl {
  left: var(--size-xxl, 24px);
}

.right-xxs {
  right: var(--size-xxs, 10px);
}

.right-xs {
  right: var(--size-xs, 12px);
}

.right-sm {
  right: var(--size-sm, 14px);
}

.right-md {
  right: var(--size-md, 16px);
}

.right-lg {
  right: var(--size-lg, 18px);
}

.right-xl {
  right: var(--size-xl, 20px);
}

.right-xxl {
  right: var(--size-xxl, 24px);
}

.m-xxs {
  margin: var(--size-xxs, 10px);
}

.m-xs {
  margin: var(--size-xs, 12px);
}

.m-sm {
  margin: var(--size-sm, 14px);
}

.m-md {
  margin: var(--size-md, 16px);
}

.m-lg {
  margin: var(--size-lg, 18px);
}

.m-xl {
  margin: var(--size-xl, 20px);
}

.m-xxl {
  margin: var(--size-xxl, 24px);
}

.mx-xxs {
  margin-left: var(--size-xxs, 10px);
  margin-right: var(--size-xxs, 10px);
}

.mx-xs {
  margin-left: var(--size-xs, 12px);
  margin-right: var(--size-xs, 12px);
}

.mx-sm {
  margin-left: var(--size-sm, 14px);
  margin-right: var(--size-sm, 14px);
}

.mx-md {
  margin-left: var(--size-md, 16px);
  margin-right: var(--size-md, 16px);
}

.mx-lg {
  margin-left: var(--size-lg, 18px);
  margin-right: var(--size-lg, 18px);
}

.mx-xl {
  margin-left: var(--size-xl, 20px);
  margin-right: var(--size-xl, 20px);
}

.mx-xxl {
  margin-left: var(--size-xxl, 24px);
  margin-right: var(--size-xxl, 24px);
}

.radius-xxs {
  border-radius: var(--size-xxs, 10px);
}

.radius-xs {
  border-radius: var(--size-xs, 12px);
}

.radius-sm {
  border-radius: var(--size-sm, 14px);
}

.radius-md {
  border-radius: var(--size-md, 16px);
}

.radius-lg {
  border-radius: var(--size-lg, 18px);
}

.radius-xl {
  border-radius: var(--size-xl, 20px);
}

.radius-xxl {
  border-radius: var(--size-xxl, 24px);
}

/* *** TEXT *** */
.text-xxs {
  font-size: var(--size-xxs, 10px);
  line-height: var(--leading-loosest, 1.875);
}

.text-xs {
  font-size: var(--size-xs, 12px);
  line-height: var(--leading-loosest, 1.875);
}

.text-sm {
  font-size: var(--size-sm, 14px);
  line-height: var(--leading-looser, 1.75);
}

.text-md {
  font-size: var(--size-md, 16px);
  line-height: var(--leading-looser, 1.75);
}

.text-lg {
  font-size: var(--size-lg, 18px);
  line-height: var(--leading-loose, 1.625);
}

.text-xl {
  font-size: var(--size-xl, 20px);
  line-height: var(--leading-loose, 1.625);
}

.text-xxl {
  font-size: var(--size-xxl, 24px);
  line-height: var(--leading-normal, 1.5);
}

.font-ultralight, .hover\\.font-ultralight:hover {
  font-weight: var(--weight-ultralight, 100);
}

.font-extralight, .hover\\.font-extralight:hover {
  font-weight: var(--weight-extralight, 200);
}

.font-light, .hover\\.font-light:hover {
  font-weight: var(--weight-light, 300);
}

.font-regular, .hover\\.font-regular:hover {
  font-weight: var(--weight-regular, 400);
}

.font-medium, .hover\\.font-medium:hover {
  font-weight: var(--weight-medium, 500);
}

.font-semibold, .hover\\.font-semibold:hover {
  font-weight: var(--weight-semibold, 600);
}

.font-bold, .hover\\.font-bold:hover {
  font-weight: var(--weight-bold, 700);
}

.font-extrabold, .hover\\.font-extrabold:hover {
  font-weight: var(--weight-extrabold, 800);
}

.font-ultrabold, .hover\\.font-ultrabold:hover {
  font-weight: var(--weight-ultrabold, 900);
}

.leading-tightest, .hover\\.leading-tightest:hover {
  line-height: var(--leading-tightest, 1.125);
}

.leading-tighter, .hover\\.leading-tighter:hover {
  line-height: var(--leading-tighter, 1.25);
}

.leading-tight, .hover\\.leading-tight:hover {
  line-height: var(--leading-tight, 1.375);
}

.leading-normal, .hover\\.leading-normal:hover {
  line-height: var(--leading-normal, 1.5);
}

.leading-loose, .hover\\.leading-loose:hover {
  line-height: var(--leading-loose, 1.625);
}

.leading-looser, .hover\\.leading-looser:hover {
  line-height: var(--leading-looser, 1.75);
}

.leading-loosest, .hover\\.leading-loosest:hover {
  line-height: var(--leading-loosest, 1.875);
}

.tracking-tightest {
  letter-spacing: var(--tracking-tightest, -0.08em);
}

.tracking-tighter {
  letter-spacing: var(--tracking-tighter, -0.04em);
}

.tracking-tight {
  letter-spacing: var(--tracking-tight, -0.02em);
}

.tracking-normal {
  letter-spacing: var(--tracking-normal, 0);
}

.tracking-loose {
  letter-spacing: var(--tracking-loose, 0.02em);
}

.tracking-looser {
  letter-spacing: var(--tracking-looser, 0.04em);
}

.tracking-loosest {
  letter-spacing: var(--tracking-loosest, 0.08em);
}

.font-sans {
  font-family: var(--family-sans, sans-serif);
}

.font-serif {
  font-family: var(--family-serif, serif);
}

.font-mono {
  font-family: var(--family-mono, monospace);
}

/* *** OPACITY *** */
.opacity-0, .hover\\.opacity-0:hover, .focus\\.opacity-0:focus {
  opacity: var(--opacity-0, 0%);
}

.opacity-10, .hover\\.opacity-10:hover, .focus\\.opacity-10:focus {
  opacity: var(--opacity-10, 10%);
}

.opacity-20, .hover\\.opacity-20:hover, .focus\\.opacity-20:focus {
  opacity: var(--opacity-20, 20%);
}

.opacity-30, .hover\\.opacity-30:hover, .focus\\.opacity-30:focus {
  opacity: var(--opacity-30, 30%);
}

.opacity-40, .hover\\.opacity-40:hover, .focus\\.opacity-40:focus {
  opacity: var(--opacity-40, 40%);
}

.opacity-50, .hover\\.opacity-50:hover, .focus\\.opacity-50:focus {
  opacity: var(--opacity-50, 50%);
}

.opacity-60, .hover\\.opacity-60:hover, .focus\\.opacity-60:focus {
  opacity: var(--opacity-60, 60%);
}

.opacity-70, .hover\\.opacity-70:hover, .focus\\.opacity-70:focus {
  opacity: var(--opacity-70, 70%);
}

.opacity-80, .hover\\.opacity-80:hover, .focus\\.opacity-80:focus {
  opacity: var(--opacity-80, 80%);
}

.opacity-90, .hover\\.opacity-90:hover, .focus\\.opacity-90:focus {
  opacity: var(--opacity-90, 90%);
}

.opacity-100, .hover\\.opacity-100:hover, .focus\\.opacity-100:focus {
  opacity: var(--opacity-100, 100%);
}

.color-opacity-0, .hover\\.color-opacity-0:hover, .focus\\.color-opacity-0:focus {
  --color-opacity: var(--opacity-0, 0%);
}

.color-opacity-10, .hover\\.color-opacity-10:hover, .focus\\.color-opacity-10:focus {
  --color-opacity: var(--opacity-10, 10%);
}

.color-opacity-20, .hover\\.color-opacity-20:hover, .focus\\.color-opacity-20:focus {
  --color-opacity: var(--opacity-20, 20%);
}

.color-opacity-30, .hover\\.color-opacity-30:hover, .focus\\.color-opacity-30:focus {
  --color-opacity: var(--opacity-30, 30%);
}

.color-opacity-40, .hover\\.color-opacity-40:hover, .focus\\.color-opacity-40:focus {
  --color-opacity: var(--opacity-40, 40%);
}

.color-opacity-50, .hover\\.color-opacity-50:hover, .focus\\.color-opacity-50:focus {
  --color-opacity: var(--opacity-50, 50%);
}

.color-opacity-60, .hover\\.color-opacity-60:hover, .focus\\.color-opacity-60:focus {
  --color-opacity: var(--opacity-60, 60%);
}

.color-opacity-70, .hover\\.color-opacity-70:hover, .focus\\.color-opacity-70:focus {
  --color-opacity: var(--opacity-70, 70%);
}

.color-opacity-80, .hover\\.color-opacity-80:hover, .focus\\.color-opacity-80:focus {
  --color-opacity: var(--opacity-80, 80%);
}

.color-opacity-90, .hover\\.color-opacity-90:hover, .focus\\.color-opacity-90:focus {
  --color-opacity: var(--opacity-90, 90%);
}

.color-opacity-100, .hover\\.color-opacity-100:hover, .focus\\.color-opacity-100:focus {
  --color-opacity: var(--opacity-100, 100%);
}

/* *** MOTION *** */
.delay-slow {
  transition-delay: var(--timing-slow, 1000ms);
}

.delay-slower {
  transition-delay: var(--timing-slower, 1500ms);
}

.delay-slowest {
  transition-delay: var(--timing-slowest, 2000ms);
}

.delay-fast {
  transition-delay: var(--timing-fast, 500ms);
}

.delay-faster {
  transition-delay: var(--timing-faster, 250ms);
}

.delay-fastest {
  transition-delay: var(--timing-fastest, 100ms);
}

.duration-slow {
  transition-duration: var(--timing-slow, 1000ms);
}

.duration-slower {
  transition-duration: var(--timing-slower, 1500ms);
}

.duration-slowest {
  transition-duration: var(--timing-slowest, 2000ms);
}

.duration-fast {
  transition-duration: var(--timing-fast, 500ms);
}

.duration-faster {
  transition-duration: var(--timing-faster, 250ms);
}

.duration-fastest {
  transition-duration: var(--timing-fastest, 100ms);
}

/* *** Z-INDEX *** */
.z-index-back {
  z-index: var(--zindex-back, 1000);
}

.z-index-front {
  z-index: var(--zindex-front, 2000);
}

.z-index-top {
  z-index: var(--zindex-top, 3000);
}"
`;

exports[`renders css for single theme 1`] = `
":root {
  --color-primary-200: #aed051;
  --color-primary-300: #c3dd7b;
  --color-primary-400: #d7e9a6;
  --color-primary-600: #75912b;
  --color-primary-500: #93b733;
  --color-primary-700: #576b21;
  --color-primary-800: #3a4717;
  --color-neutral-600: white;
  --color-neutral-500: rgb(255, 255, 255);
  --color-neutral-400: rgb(255, 255, 255);
  --color-neutral-300: #fefefe;
  --color-neutral-200: #fefefe;
  --color-neutral-100: #fefefe;
  --color-neutral-800: #7f7f7f;
  --color-neutral-900: black;
  --color-primary: #93b733;
  --color-neutral: #fefefe;
  --size-none: 0;
  --size-none--em: 0;
  --size-xx-small: 2px;
  --size-xx-small--em: 0.125;
  --size-x-small: 4px;
  --size-x-small--em: 0.25;
  --size-small: 0.5;
  --size-small--em: 0.5;
  --size-regular: 16px;
  --size-regular--em: 1;
  --size-large: 200%;
  --size-large--em: 2;
  --size-x-large: 64px;
  --size-x-large--em: 4;
  --size-xx-large: 128px;
  --size-xx-large--em: 8;
  --opacity-20: 0.2;
  --opacity-20--em: 0.2;
  --opacity-50: 50%;
  --opacity-50--em: 0.5;
  --opacity-80: 80%;
  --opacity-80--em: 0.8;
  --leadings-tightest: 1.125;
  --leadings-tightest--em: 1.125;
  --leadings-tighter: 1.25;
  --leadings-tighter--em: 1.25;
  --leadings-tight: 1.375;
  --leadings-tight--em: 1.375;
  --leadings-normal: 1.5;
  --leadings-normal--em: 1.5;
  --leadings-loose: 1.625;
  --leadings-loose--em: 1.625;
  --leadings-looser: 1.75;
  --leadings-looser--em: 1.75;
  --leadings-loosest: 1.875;
  --leadings-loosest--em: 1.875;
  --weight-ultralight: 100;
  --weight-ultralight--em: 100;
  --weight-extralight: 200;
  --weight-extralight--em: 200;
  --weight-light: 300;
  --weight-light--em: 300;
  --weight-regular: 400;
  --weight-regular--em: 400;
  --weight-medium: 500;
  --weight-medium--em: 500;
  --weight-semibold: 600;
  --weight-semibold--em: 600;
  --weight-bold: 700;
  --weight-bold--em: 700;
  --weight-extrabold: 800;
  --weight-extrabold--em: 800;
  --weight-ultrabold: 900;
  --weight-ultrabold--em: 900;
}

body {
  color: #93b733;
  background-color: var(--color-neutral, #fefefe);
}

.test {
  color: color-mix(in srgb, var(--color-primary, #93b733) calc(var(--opacity-20--em, 0.2) * 100%), transparent);
  background-color: rgba(147, 183, 51, 0.2);
  font-size: var(--size-regular, 16px);
  font-size: 16px;
  font-size: calc(var(--size-small--em, 0.5) * 1rem);
  font-size: 0.5rem;
}"
`;

exports[`renders css for theme overrides 1`] = `
":root {
  --color-primary-200: #aed051;
  --color-primary-300: #c3dd7b;
  --color-primary-400: #d7e9a6;
  --color-primary-600: #75912b;
  --color-primary-500: #93b733;
  --color-primary-700: #576b21;
  --color-primary-800: #3a4717;
  --color-neutral-600: white;
  --color-neutral-500: rgb(255, 255, 255);
  --color-neutral-400: rgb(255, 255, 255);
  --color-neutral-300: #fefefe;
  --color-neutral-200: #fefefe;
  --color-neutral-100: #fefefe;
  --color-neutral-800: #7f7f7f;
  --color-neutral-900: black;
  --color-primary: #93b733;
  --color-neutral: #fefefe;
  --size-none: 0;
  --size-none--em: 0;
  --size-xx-small: 2px;
  --size-xx-small--em: 0.125;
  --size-x-small: 4px;
  --size-x-small--em: 0.25;
  --size-small: 0.5;
  --size-small--em: 0.5;
  --size-regular: 16px;
  --size-regular--em: 1;
  --size-large: 200%;
  --size-large--em: 2;
  --size-x-large: 64px;
  --size-x-large--em: 4;
  --size-xx-large: 128px;
  --size-xx-large--em: 8;
  --opacity-20: 0.2;
  --opacity-20--em: 0.2;
  --opacity-50: 50%;
  --opacity-50--em: 0.5;
  --opacity-80: 80%;
  --opacity-80--em: 0.8;
  --leadings-tightest: 1.125;
  --leadings-tightest--em: 1.125;
  --leadings-tighter: 1.25;
  --leadings-tighter--em: 1.25;
  --leadings-tight: 1.375;
  --leadings-tight--em: 1.375;
  --leadings-normal: 1.5;
  --leadings-normal--em: 1.5;
  --leadings-loose: 1.625;
  --leadings-loose--em: 1.625;
  --leadings-looser: 1.75;
  --leadings-looser--em: 1.75;
  --leadings-loosest: 1.875;
  --leadings-loosest--em: 1.875;
  --weight-ultralight: 100;
  --weight-ultralight--em: 100;
  --weight-extralight: 200;
  --weight-extralight--em: 200;
  --weight-light: 300;
  --weight-light--em: 300;
  --weight-regular: 400;
  --weight-regular--em: 400;
  --weight-medium: 500;
  --weight-medium--em: 500;
  --weight-semibold: 600;
  --weight-semibold--em: 600;
  --weight-bold: 700;
  --weight-bold--em: 700;
  --weight-extrabold: 800;
  --weight-extrabold--em: 800;
  --weight-ultrabold: 900;
  --weight-ultrabold--em: 900;
}

body.alt {
  --color-primary: #ff0000;
  --size-root: 14px;
  --size-root--em: 1;
  --size-small: 7px;
  --size-small--em: 0.5;
  --size-regular: 14px;
  --size-regular--em: 1;
}

.test {
  color: #ff0000;
  color: var(--color-primary, #ff0000);
  color: color-mix(in srgb, var(--color-primary, #ff0000) 20%, transparent);
  color: rgba(255, 0, 0, 0.2);
  font-size: calc(var(--size-small--em, 0.5) * 1rem);
  font-size: 0.5rem;
}"
`;

exports[`renders css with prefixes 1`] = `
":root {
  --ok--color-primary-200: #aed051;
  --ok--color-primary-300: #c3dd7b;
  --ok--color-primary-400: #d7e9a6;
  --ok--color-primary-600: #75912b;
  --ok--color-primary-500: #93b733;
  --ok--color-primary-700: #576b21;
  --ok--color-primary-800: #3a4717;
  --ok--color-neutral-600: white;
  --ok--color-neutral-500: rgb(255, 255, 255);
  --ok--color-neutral-400: rgb(255, 255, 255);
  --ok--color-neutral-300: #fefefe;
  --ok--color-neutral-200: #fefefe;
  --ok--color-neutral-100: #fefefe;
  --ok--color-neutral-800: #7f7f7f;
  --ok--color-neutral-900: black;
  --ok--color-primary: #93b733;
  --ok--color-neutral: #fefefe;
  --ok--size-none: 0;
  --ok--size-none--em: 0;
  --ok--size-xx-small: 2px;
  --ok--size-xx-small--em: 0.125;
  --ok--size-x-small: 4px;
  --ok--size-x-small--em: 0.25;
  --ok--size-small: 0.5;
  --ok--size-small--em: 0.5;
  --ok--size-regular: 16px;
  --ok--size-regular--em: 1;
  --ok--size-large: 200%;
  --ok--size-large--em: 2;
  --ok--size-x-large: 64px;
  --ok--size-x-large--em: 4;
  --ok--size-xx-large: 128px;
  --ok--size-xx-large--em: 8;
  --ok--opacity-20: 0.2;
  --ok--opacity-20--em: 0.2;
  --ok--opacity-50: 50%;
  --ok--opacity-50--em: 0.5;
  --ok--opacity-80: 80%;
  --ok--opacity-80--em: 0.8;
}

.test {
  color: #93b733;
  color: var(--ok--color-primary, #93b733);
  color: color-mix(in srgb, var(--ok--color-primary, #93b733) 20%, transparent);
  color: rgba(147, 183, 51, 0.2);
  font-size: calc(var(--ok--size-small--em, 0.5) * 1rem);
  font-size: 0.5rem;
}"
`;

exports[`renders css with references 1`] = `
":root {
  --color-primary: #2a4ff0;
  --color-secondary: #ff593a;
  --color-foreground: #000000;
  --color-background: #ffffff;
}

body {
  color: var(--color-foreground, #000000);
  background-color: var(--color-background, #ffffff);
}
body.invert {
  --color-primary: #4557b6;
  --color-secondary: #a1170a;
  --color-foreground: #ffffff;
  --color-background: #000000;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-primary: #4557b6;
    --color-secondary: #a1170a;
    --color-foreground: #ffffff;
    --color-background: #000000;
  }
  body.invert {
    --color-primary: #2a4ff0;
    --color-secondary: #ff593a;
    --color-foreground: #000000;
    --color-background: #ffffff;
  }
}
.btn {
  --button-primary-background: var(--color-primary, #2a4ff0);
  --button-primary-text: var(--color-foreground, #000000);
  --button-secondary-background: var(--color-secondary, #ff593a);
  --button-secondary-text: var(--color-foreground, #000000);
}
.btn--primary {
  background-color: var(--button-primary-background, #2a4ff0);
  color: var(--button-primary-text, #000000);
}
.btn--secondary {
  background-color: var(--button-secondary-background, #ff593a);
  color: var(--button-secondary-text, #000000);
}"
`;
